tests/fixtures/invalid/max_set_bool.py
# Cannot call max() with Set[int], Bool
x = max({1, 2, 3}, True)
